Work in progress: partial rewrite of latex support for NB6.0.